--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "ase",
     "bokeh<3",
     "selenium",
+    "pandas",
     "chromedriver-binary",
 #    "aiida-common-workflows @ git+https://github.com/aiidateam/aiida-common-workflows@v0.1.0",
 ]
