--- a/2-experiments/2024-07-plot-element-summary/plot-pp-table-summary/conf_mapping.json
+++ b/2-experiments/2024-07-plot-element-summary/plot-pp-table-summary/conf_mapping.json
@@ -1,8 +1,11 @@
 {
+    "Ac": "DC",
     "Ag": "FCC",
     "Al": "FCC",
+    "Am": "DC",
     "Ar": "FCC",
     "As": "DC",
+    "At": "BCC",
     "Au": "FCC",
     "B": "DC",
     "Ba": "FCC",
@@ -12,19 +15,27 @@
     "C": "DC",
     "Ca": "FCC",
     "Cd": "FCC",
+    "Ce": "FCC",
     "Cl": "DC",
+    "Cm": "DC",
     "Co": "FCC",
     "Cr": "BCC",
     "Cs": "FCC",
     "Cu": "FCC",
+    "Dy": "FCC",
+    "Er": "FCC",
+    "Eu": "BCC",
     "F": "DC",
     "Fe": "FCC",
+    "Fr": "FCC",
     "Ga": "FCC",
+    "Gd": "BCC",
     "Ge": "DC",
     "H": "DC",
     "He": "FCC",
     "Hf": "FCC",
     "Hg": "FCC",
+    "Ho": "FCC",
     "I": "BCC",
     "In": "FCC",
     "Ir": "FCC",
@@ -39,15 +50,22 @@
     "N": "DC",
     "Na": "FCC",
     "Nb": "BCC",
+    "Nd": "FCC",
     "Ne": "FCC",
     "Ni": "FCC",
+    "Np": "BCC",
     "O": "DC",
     "Os": "FCC",
     "P": "DC",
+    "Pa": "FCC",
     "Pb": "BCC",
     "Pd": "FCC",
+    "Pm": "FCC",
     "Po": "BCC",
+    "Pr": "FCC",
     "Pt": "FCC",
+    "Pu": "DC",
+    "Ra": "FCC",
     "Rb": "FCC",
     "Re": "FCC",
     "Rh": "FCC",
@@ -58,41 +76,23 @@
     "Sc": "FCC",
     "Se": "DC",
     "Si": "DC",
+    "Sm": "FCC",
     "Sn": "DC",
     "Sr": "FCC",
     "Ta": "BCC",
+    "Tb": "BCC",
     "Tc": "FCC",
     "Te": "BCC",
-    "Ti": "FCC",
+    "Th": "FCC",
+    "Ti": "BCC",
     "Tl": "BCC",
+    "Tm": "FCC",
+    "U": "BCC",
     "V": "BCC",
     "W": "BCC",
     "Xe": "FCC",
     "Y": "FCC",
-    "Zn": "FCC",
-    "Zr": "FCC",
-    "At": "BCC",
-    "Ce": "FCC",
-    "Dy": "FCC",
-    "Er": "FCC",
-    "Eu": "BCC",
-    "Gd": "BCC",
-    "Ho": "FCC",
-    "Nd": "FCC",
-    "Pm": "FCC",
-    "Pr": "FCC",
-    "Sm": "FCC",
-    "Tb": "FCC",
-    "Tm": "FCC",
-    "Fr": "FCC",
-    "Ra": "FCC",
     "Yb": "FCC",
-    "Am": "DC",
-    "Cm": "DC",
-    "Np": "BCC",
-    "Pa": "FCC",
-    "Pu": "DC",
-    "Th": "FCC",
-    "U": "BCC",
-    "Ac": "DC"
+    "Zn": "FCC",
+    "Zr": "FCC"
 }
