--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+PeriodicTable = "7b2266bf-644c-5ea3-82d8-af4bbd25a884"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
